Hibernate dependency and cfg added

--- a/bdse-kvnode/pom.xml
+++ b/bdse-kvnode/pom.xml
@@ -9,4 +9,17 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>bdse-kvnode</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.13.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4-1200-jdbc41</version>
+        </dependency>
+    </dependencies>
 </project>
