--- a/bdse-kvnode/pom.xml
+++ b/bdse-kvnode/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>postgresql</artifactId>
             <version>9.4-1200-jdbc41</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.docker-java</groupId>
+            <artifactId>docker-java</artifactId>
+            <version>3.0.14</version>
+        </dependency>
     </dependencies>
 </project>
