--- a/bdse-integration-tests/src/test/resources/kvnode/Dockerfile
+++ b/bdse-integration-tests/src/test/resources/kvnode/Dockerfile
@@ -1,6 +1,12 @@
 # https://hub.docker.com/_/java/
+
 FROM openjdk:8-jdk-alpine
-MAINTAINER Alexander Savin <alesavin@gmail.com>
 VOLUME /tmp
+
+# I honestly don't know how to run docker under docker.
+# Just specifing `-v /var/run/docker.sock:/var/run/docker.sock` does not work.
+# So install alpine docker client inside of the container.
+RUN apk update && apk add docker
+
 ADD target/bdse-kvnode-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app.jar", "ru.csc.bdse.Application"]
